# ProjectArmchair

./: .gitignore  CMakeLists.txt  README.md
cpp/: CMakeLists.txt
cpp/src/: main.cpp
include/armchair/: model.hpp
include/armchair/layers/: test_layer.hpp
include/armchair/objects/: dwarf.hpp
include/armchair/sim_object/: sim_object.hpp
include/engine/: application.hpp  layer.hpp  layer_stack.hpp  render_object.hpp  sprite_map.hpp
include/engine/events/: event.hpp  keyboard_events.hpp  mouse_events.hpp  window_events.hpp
include/engine/window/: sfml_util.hpp  window.hpp
include/util/: constants.hpp  logging.hpp
src/armchair/: armchair.cpp  main.cpp  model.cpp
src/engine/: application.cpp  window.cpp
src/sfml_sample/: sfml_sample.cpp
